Fix animated gallery items on mobile

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 						}
 					}
 					svg {
-						height: 300px;
+						max-height: var(--reel-height);
+						width: 100%;
 						border-radius: 12px;
 					}
 					svg circle {
