Add google analytics

--- a/index.html
+++ b/index.html
@@ -192,6 +192,14 @@
     <script src="//mrdoob.github.io/stats.js/build/stats.min.js"></script>
     <script src="three.js"></script>
     <script src="index.js"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-104160773-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-104160773-1');
+    </script>
 </body>
 
 </html>
