link out to blog

--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
                         <a href="https://twitter.com/blockzain">
                             <ion-icon name="logo-twitter"></ion-icon>
                         </a>
+                        <a href="https://blog.zainafzal.com">
+                            <ion-icon name="newspaper"></ion-icon>
+                        </a>
                     </div>
                 </div>
             </div>
